<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.authentication.login.LoginFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/welcome_app"
        android:textSize="22sp"
        android:textColor="@color/color_text_primary"
        android:layout_marginTop="140dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="140dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/login_description"
        android:textSize="14sp"
        android:textColor="@color/color_text_primary"
        android:letterSpacing="-0.05"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:textColor="@color/color_text_primary"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/placeholder_email"
        android:background="@drawable/input"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:textColorHint="@color/color_text_hint"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:textColor="@color/color_text_primary"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/placeholder_password"
        android:background="@drawable/input"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:textColorHint="@color/color_text_hint"
        app:layout_constraintTop_toBottomOf="@id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:textColor="@color/color_text_primary"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />


    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/login"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:background="@drawable/button_primary"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"/>

    <LinearLayout
        android:id="@+id/orDivider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#F6F6F9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            android:textColor="@color/color_text_hint"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#F6F6F9" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/googleLoginButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/button_login_google"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/orDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp">

        <ImageView
            android:id="@+id/googleIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_google_logo"
            android:contentDescription="@string/google_icon"
            android:layout_marginEnd="12dp" />

        <TextView
            android:id="@+id/googleLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_google"
            android:textColor="@color/color_text_primary"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signupTextContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/googleLoginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:fontFamily="@font/poppins"
            android:textColor="@color/color_text_primary"
            android:textSize="14sp"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/textSignupLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:fontFamily="@font/poppins"
            android:textColor="@color/color_primary"
            android:textSize="14sp"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>