<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/page_title"
            app:titleTextColor="@color/white"
            app:titleCentered="true"
            app:navigationIcon="@drawable/baseline_arrow_back_24" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/AppBarLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:background="@color/color_primary">

                <ImageView
                    android:id="@+id/iv_profile_image"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/user_image"
                    android:src="@drawable/image_profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toEndOf="@id/iv_profile_image"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/username"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/role"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/role"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/person_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="20dp"
                android:background="@drawable/background_rounded">

                <TextView
                    android:id="@+id/user_gmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_gmail"
                    android:drawablePadding="12dp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/poppins"
                    app:drawableStartCompat="@drawable/icon_mail" />

                <TextView
                    android:id="@+id/phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:drawablePadding="12dp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/poppins"
                    app:drawableStartCompat="@drawable/icon_call" />

                <TextView
                    android:id="@+id/birthdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthdate"
                    android:drawablePadding="12dp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/poppins"
                    app:drawableStartCompat="@drawable/icon_calendar" />

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:drawablePadding="12dp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/poppins"
                    app:drawableStartCompat="@drawable/icon_person" />

                <TextView
                    android:id="@+id/blood_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_type"
                    android:drawablePadding="12dp"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/poppins"
                    app:drawableStartCompat="@drawable/icon_blood_type" />

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:drawablePadding="12dp"
                    android:fontFamily="@font/poppins"
                    app:drawableStartCompat="@drawable/icon_weight" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/history_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="20dp"
                android:background="@drawable/background_rounded">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/can_donor"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="12sp"
                    android:background="@drawable/badge_success"
                    android:drawablePadding="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_marginBottom="12dp"
                    android:gravity="center_vertical"
                    app:drawableStartCompat="@drawable/icon_check_circle" />

                <LinearLayout
                    android:id="@+id/profile_history_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_donor"
                        android:fontFamily="@font/poppins" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/last_date_donor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_date_donor"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColor="@color/color_text_secondary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_donor"
                        android:fontFamily="@font/poppins" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/total_number_donor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_number_donor"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColor="@color/color_text_secondary" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="16dp"
                android:padding="20dp"
                android:backgroundTint="@color/white"
                android:text="@string/history_donor"
                android:textAlignment="viewStart"
                android:fontFamily="@font/poppins"
                android:textColor="@color/color_text_primary"
                android:textSize="14sp"
                app:icon="@drawable/icon_history"
                app:iconGravity="textStart"
                app:iconPadding="16dp"
                app:iconTint="@color/color_text_primary"
                app:backgroundTint="@color/white"
                app:strokeColor="@color/color_secondary"
                app:strokeWidth="1dp"
                app:cornerRadius="8dp"
                android:clickable="true"
                android:focusable="true"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_account_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="16dp"
                android:padding="20dp"
                android:backgroundTint="@color/white"
                android:text="@string/edit_profile"
                android:textAlignment="viewStart"
                android:fontFamily="@font/poppins"
                android:textColor="@color/color_text_primary"
                android:textSize="14sp"
                app:icon="@drawable/icon_edit_square"
                app:iconGravity="textStart"
                app:iconPadding="16dp"
                app:iconTint="@color/color_text_primary"
                app:backgroundTint="@color/white"
                app:strokeColor="@color/color_secondary"
                app:strokeWidth="1dp"
                app:cornerRadius="8dp"
                android:clickable="true"
                android:focusable="true"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/logout"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:background="@drawable/button_primary"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
