<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="2dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_rounded"
        android:elevation="0dp">

        <ImageView
            android:id="@+id/imageJadwal"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/event_location"
            android:scaleType="centerCrop"
            android:src="@drawable/image_43"
            android:background="@drawable/background_rounded"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="12dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/txtLocation"
                android:text="@string/event_location"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/icon_calendar"
                    android:src="@drawable/baseline_calendar_24" />

                <TextView
                    android:id="@+id/eventDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_date"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/color_text_primary"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingBottom="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/icon_time"
                    android:src="@drawable/baseline_time_24" />

                <TextView
                    android:id="@+id/eventTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_time"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/color_text_primary"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
