<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="12dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_rounded"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/eventImage"
            android:layout_width="match_parent"
            android:layout_height="112.5dp"
            android:contentDescription="@string/event_location"
            android:scaleType="centerCrop"
            android:src="@drawable/article1" />

        <TextView
            android:id="@+id/eventLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/event_location"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/color_text_primary"
            android:layout_marginBottom="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/icon_calendar"
                android:src="@drawable/baseline_calendar_24" />

            <TextView
                android:id="@+id/eventDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_date"
                android:fontFamily="@font/poppins"
                android:textColor="@color/color_text_primary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/icon_time"
                android:src="@drawable/baseline_time_24" />

            <TextView
                android:id="@+id/eventTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_time"
                android:fontFamily="@font/poppins"
                android:textColor="@color/color_text_primary"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
